[metadata]
name = zartdeploy
version = 0.1.0
description = Deploy tool
long_description = file: README.txt
url = https://github.com/zart/zartdeploy
author = Konstantin Zemlyak
author_email = zart@zartsoft.ru
license = MIT

[options]
zip_safe = True
py_modules = zartdeploy

[options.entry_points]
console_scripts =
    zartdeploy = zartdeploy:main

[bdist_wheel]
universal = 1
